# compiler-EANumbers

./: EANumbers.cabal  README.md
app/: Main.hs
src/: EAFloat.hs  EAInteger.hs
test/: EAFloatSpec.hs  EAIntegerSpec.hs
