name:                EANumbers
version:             0.1.0.0
synopsis:            A simple Finite Automaton
description:         see README.md
homepage:            http://ob.cs.hm.edu/lectures/compiler
license:             BSD3
license-file:        LICENSE
author:              Oliver Braun
maintainer:          ob@cs.hm.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ea
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , EANumbers
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     EAInteger
                     , EAFloat
  build-depends:       base
  default-language:    Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     EAIntegerSpec
                   , EAFloatSpec
  Build-depends:     base
                   , EANumbers
                   , hspec
                   , QuickCheck
  default-language:  Haskell2010
  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
